--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Resposive Html Grids</title>
     <!-- font awesome-->
     <script src="https://kit.fontawesome.com/2f53a9689d.js"></script>
+    <!--font from google-->
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
