css changes for resposive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <!-- font awesome-->
     <script src="https://kit.fontawesome.com/2f53a9689d.js"></script>
     <!--font from google-->
-    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -22,96 +25,101 @@
           <li><a href="">Contact</a></li>
         </ul>
       </nav>
+
+      <!-- top container start-->
+      <section class="top-container">
+        <header class="showcase">
+          <h1>Web Services</h1>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam
+            suscipit hic accusamus quidem modi! Perspiciatis!
+          </p>
+          <a href="" class="btn">Read More</a>
+        </header>
+        <div class="top-box top-box-a">
+          <h4>Membebrship</h4>
+          <p class="price">$99.99/mo</p>
+          <a href="" class="btn">Buy Now</a>
+        </div>
+        <div class="top-box top-box-b">
+          <h4>Silver Membebrship</h4>
+          <p class="price">$199.99/mo</p>
+          <a href="" class="btn">Buy Now</a>
+        </div>
+      </section>
+      <!--top container ends-->
+
+      <!--boxes -->
+      <section class="boxes">
+        <div class="box">
+          <i class="fas fa-chart-pie fa-4x"></i>
+          <h3>Analytics</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+            sed!
+          </p>
+        </div>
+        <div class="box">
+          <i class="fas fa-globe fa-4x"></i>
+          <h3>Marketing</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+            sed!
+          </p>
+        </div>
+        <div class="box">
+          <i class="fas fa-cog fa-4x"></i>
+          <h3>Development</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+            sed!
+          </p>
+        </div>
+        <div class="box">
+          <i class="fas fa-users fa-4x"></i>
+          <h3>Support</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+            sed!
+          </p>
+        </div>
+      </section>
+      <!--boxes ends-->
+
+      <!-- info starts-->
+      <section class="info">
+        <img src="images/business.jpg" alt="" />
+        <div>
+          <h2>Your Business On The Web</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, id
+            aut. Quis animi repellat laboriosam ipsum vitae dolore labore odit
+            architecto ullam praesentium nisi illo nam, quaerat quas ratione
+            velit.
+          </p>
+          <a href="" class="btn">Learn more</a>
+        </div>
+      </section>
+
+      <!--portfolio-->
+      <section class="portfolio">
+        <img src="https://source.unsplash.com/random/200x200" alt="" />
+        <img src="https://source.unsplash.com/random/201x200" alt="" />
+        <img src="https://source.unsplash.com/random/202x200" alt="" />
+        <img src="https://source.unsplash.com/random/203x200" alt="" />
+        <img src="https://source.unsplash.com/random/204x200" alt="" />
+        <img src="https://source.unsplash.com/random/205x200" alt="" />
+        <img src="https://source.unsplash.com/random/206x200" alt="" />
+        <img src="https://source.unsplash.com/random/207x200" alt="" />
+        <img src="https://source.unsplash.com/random/208x200" alt="" />
+        <img src="https://source.unsplash.com/random/209x200" alt="" />
+      </section>
+
+      <!--footer-->
+      <footer>
+        <p>Html Grids&copy;2019</p>
+      </footer>
     </div>
     <!-- wrapper end-->
-
-    <!-- top container start-->
-    <section class="top-container">
-      <header class="showcase">
-        <h1>Web Services</h1>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam
-          suscipit hic accusamus quidem modi! Perspiciatis!
-        </p>
-        <a href="" class="btn">Read More</a>
-      </header>
-      <div class="top-box top-box-a">
-        <h4>Membebrship</h4>
-        <p class="price">$99.99/mo</p>
-        <a href="" class="btn">Buy Now</a>
-      </div>
-      <div class="top-box top-box-b">
-        <h4>Silver Membebrship</h4>
-        <p class="price">$199.99/mo</p>
-        <a href="" class="btn">Buy Now</a>
-      </div>
-    </section>
-    <!--top container ends-->
-
-    <!--boxes -->
-    <section class="boxes">
-      <div class="box">
-        <i class="fas fa-chart-pie fa-4x"></i>
-        <h3>Analytics</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
-          sed!
-        </p>
-      </div>
-      <div class="box">
-        <i class="fas fa-globe fa-4x"></i>
-        <h3>Marketing</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
-          sed!
-        </p>
-      </div>
-      <div class="box">
-        <i class="fas fa-cog fa-4x"></i>
-        <h3>Development</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
-          sed!
-        </p>
-      </div>
-      <div class="box">
-        <i class="fas fa-users fa-4x"></i>
-        <h3>Support</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
-          sed!
-        </p>
-      </div>
-    </section>
-    <!--boxes ends-->
-
-    <!-- info starts-->
-    <section class="info">
-        <img src="images/business.jpg" alt="">
-            <div>
-                <h2>Your Business On The Web</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, id aut. Quis animi repellat laboriosam ipsum vitae dolore labore odit architecto ullam praesentium nisi illo nam, quaerat quas ratione velit.</p>
-                <a href="" class="btn">Learn more</a>
-            </div>
-    </section>
-
-    <!--portfolio-->
-     <section class="portfolio">
-        <img src="https://source.unsplash.com/random/200x200" alt="">
-        <img src="https://source.unsplash.com/random/201x200" alt="">
-        <img src="https://source.unsplash.com/random/202x200" alt="">
-        <img src="https://source.unsplash.com/random/203x200" alt="">
-        <img src="https://source.unsplash.com/random/204x200" alt="">
-        <img src="https://source.unsplash.com/random/205x200" alt="">
-        <img src="https://source.unsplash.com/random/206x200" alt="">
-        <img src="https://source.unsplash.com/random/207x200" alt="">
-        <img src="https://source.unsplash.com/random/208x200" alt="">
-        <img src="https://source.unsplash.com/random/209x200" alt="">
-    </section>
-
-    <!--footer-->
-    <footer>
-        <p>Html Grids&copy;2019</p>
-    </footer>
   </body>
 </html>
